crates/turborepo-lib/src/snapshots/turborepo_lib__opts__test__force.snap
---
source: crates/turborepo-lib/src/opts.rs
expression: cache_opts.cache
---
{
  "local": {
    "read": false,
    "write": true
  },
  "remote": {
    "read": false,
    "write": true
  }
}
