crates/turborepo-lib/src/snapshots/turborepo_lib__opts__test__force_remote:r,local:r.snap
---
source: crates/turborepo-lib/src/opts.rs
expression: cache_opts.cache
---
{
  "local": {
    "read": false,
    "write": false
  },
  "remote": {
    "read": false,
    "write": false
  }
}
