crates/turborepo-lib/src/snapshots/turborepo_lib__opts__test__force_remote_r,local_r.snap
---
source: crates/turborepo-lib/src/opts.rs
expression: cache_config
---
Ok(
    CacheConfig {
        local: CacheActions {
            read: false,
            write: false,
        },
        remote: CacheActions {
            read: false,
            write: false,
        },
    },
)
