crates/turborepo-lib/src/snapshots/turborepo_lib__opts__test__no-cache.snap
---
source: crates/turborepo-lib/src/opts.rs
expression: cache_config
---
Ok(
    CacheConfig {
        local: CacheActions {
            read: true,
            write: false,
        },
        remote: CacheActions {
            read: true,
            write: false,
        },
    },
)
