crates/turborepo-lib/src/snapshots/turborepo_lib__opts__test__no-cache_remote_w,local_rw.snap
---
source: crates/turborepo-lib/src/opts.rs
expression: cache_opts.cache
---
{
  "local": {
    "read": true,
    "write": false
  },
  "remote": {
    "read": false,
    "write": false
  }
}
