crates/turborepo-lib/src/snapshots/turborepo_lib__opts__test__remote-cache-read-only_remote:rw,local:r.snap
---
source: crates/turborepo-lib/src/opts.rs
expression: cache_opts.cache
---
{
  "local": {
    "read": true,
    "write": false
  },
  "remote": {
    "read": true,
    "write": false
  }
}
