crates/turborepo-lib/src/snapshots/turborepo_lib__opts__test__remote-only_remote_r,local_rw.snap
---
source: crates/turborepo-lib/src/opts.rs
expression: cache_opts.cache
---
{
  "local": {
    "read": false,
    "write": false
  },
  "remote": {
    "read": true,
    "write": false
  }
}
