crates/turborepo-lib/src/snapshots/turborepo_lib__opts__test__turbo_boundaries_--filter_foo.snap
---
source: crates/turborepo-lib/src/opts.rs
expression: "json!({\n    \"tasks\": opts.run_opts.tasks, \"filter_patterns\":\n    opts.scope_opts.filter_patterns\n})"
---
{
  "tasks": [],
  "filter_patterns": [
    "foo"
  ]
}
